Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36900

QQuickWindow applications hang on exit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0
    • 5.2.1
    • None
    • Arch Linux 64bit with Catalyst 14.1 drivers

      QQuickWindow-based applications seem to hang on exit, sometimes resulting in a busyloop consuming an entire CPU core. Exiting via SIGINT yields the following backtrace:

      #0 0x00007ffff4caa7ac in __lll_lock_wait () from /usr/lib/libpthread.so.0
      #1 0x00007ffff4ca7d30 in pthread_rwlock_unlock () from /usr/lib/libpthread.so.0
      #2 0x00007ffff4f1d782 in glXCreatePbuffer () from /usr/lib/libGL.so.1
      #3 0x00007fffeff20a78 in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
      #4 0x00007fffeff04231 in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
      #5 0x00007ffff64beb93 in QOffscreenSurface::create() ()
      from /usr/lib/libQt5Gui.so.5
      #6 0x00007ffff79a3f44 in ?? () from /usr/lib/libQt5Quick.so.5
      #7 0x00007ffff79a47e0 in ?? () from /usr/lib/libQt5Quick.so.5
      #8 0x00007ffff79c0b9f in QQuickWindow::~QQuickWindow() ()
      from /usr/lib/libQt5Quick.so.5
      #9 0x00007ffff7a5f489 in QQuickView::~QQuickView() ()
      from /usr/lib/libQt5Quick.so.5
      #10 0x000000000040414d in ?? ()
      #11 0x00007ffff53fab05 in __libc_start_main () from /usr/lib/libc.so.6
      #12 0x00000000004064e7 in ?? ()

      This happens on bundled applications like qmlscene as well as trivial ones, like:

      #include <QGuiApplication>
      #include <QQuickWindow>

      int main(int argc, char *argv[])
      {
      QGuiApplication a(argc, argv);
      QQuickWindow w;
      w.show();
      return a.exec();
      }

        For Gerrit Dashboard: QTBUG-36900
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            bzar Teemu Erkkola
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes